issue with corrupt css - fixed issue with overlay spill

--- a/public/assets/css/analytics-site.css
+++ b/public/assets/css/analytics-site.css
@@ -1584,55 +1584,7 @@ table .span5 {
 .jarvis.dashboard.jtable.widget .content, .jarvis.dashboard.bartable.widget .content {
     min-height: 0;
 }
-/*
-span.selectWrapper {
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
-    width: auto;
-    min-width: 70px;
-}
 
-span.selectWrapper select {
-    display: inline-block;
-    padding: 4px 11px 3px 5px;
-    margin: 0 10px;
-    font: inherit;
-    outline: none; /* remove focus ring from Webkit */
-    line-height: 1.2;
-    background: #f5f5f5;
-    height: 30px;
-    color: #666666;
-    border: 1px solid #dddddd;
-
-}
-
-/* Select arrow styling */
-span.selectWrapper:after {
-    content: url("../img/arrow_down.png");
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    line-height: 30px;
-    padding: 0 7px;
-    background: #f5f5f5;
-    color: white;
-    border: 1px solid #dddddd;
-    border-left: 0px;
-    pointer-events: none;
-}
-
-span.selectWrapper:after {
-    /*content: none;*/
-}
-
-@media screen and (min-width:0 \0) {
-    span.selectWrapper:after {
-        display: none;
-    }
-}
-*/
 input[type=checkbox] {
     top: 0 !important;
 }
